<resources>
    <string name="app_name">ClientApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rectangle_background">rectangle background</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_email_and_password">Enter your \nemail and password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>

    <string name="profile_name">Name</string>
    <string name="profile_username">Username</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_logout">Logout</string>

    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_hint_name">Name</string>
    <string name="edit_profile_hint_username">Username</string>
    <string name="edit_profile_hint_password">Password</string>
    <string name="edit_profile_save_button">Save</string>
    <string name="edit_profile_cancel_button">Cancel</string>

    <string name="profile_content_description_avatar_image">Avatar Image</string>
    <string name="profile_content_description_pen_icon">Pen Icon"</string>

    <string name="name">Name</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="avatar">Avatar</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="logo">logo</string>
    <string name="profile_image">profile image</string>
    <string name="name_text_view">%s</string>
    <string name="time">%s</string>
    <string name="last_message">%s</string>
    <string name="back_button">Back Button</string>
    <string name="name_title">%s</string>
    <string name="delete_button">trash button</string>
    <string name="send_button">send button</string>
    <string name="type_a_message">Type a message...</string>

    <string name="chats_content_description_ic_close">Close Button</string>
    <string name="chats_content_description_ic_search">Search Button</string>
    <string name="cancel_button">Cacel button</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="delete_conversation_title">Delete conversation</string>
    <string name="delete_conversation_message">Are you sure you want to delete this conversation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conversation_deleted">Conversation deleted</string>
    <string name="chat_list_content_description_avatar_image">chat_list_content_description_avatar_image</string>

</resources>