<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rectangle_background"
            android:scaleType="fitXY"
            android:src="@drawable/rectangle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/normal_layout"
            android:paddingTop="54dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_layout"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/baseline_arrow_back"
                    android:text="@string/login"
                    android:textColor="#1565C0"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <FrameLayout
                android:id="@+id/profileImageFrameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:visibility="gone">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:padding="5dp"
                    android:src="@drawable/baseline_person"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:strokeColor="@color/white"
                    app:strokeWidth="5dp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/edit_icon"
                    android:scaleType="fitStart"
                    android:src="@drawable/edit_icon" />

            </FrameLayout>


            <TextView
                android:id="@+id/enterYourEmailAndPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_and_password"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/normal_layout">

        <LinearLayout
            android:id="@+id/usernameAndPasswordLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_layout"
                android:autofillHints="username"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/normal_layout"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="24sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/registerButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:background="@drawable/circular_gradient_button_not_active"
            android:contentDescription="@string/login"
            android:src="@drawable/outline_arrow_forward"
            android:text="@string/login"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
</LinearLayout>